<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnSeConnecter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/se_connecter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNotifs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/notifications"
        app:layout_constraintBottom_toBottomOf="@+id/btnSeConnecter"
        app:layout_constraintEnd_toStartOf="@+id/btnSettings"
        app:layout_constraintTop_toTopOf="@+id/btnSeConnecter"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="@+id/btnNotifs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnNotifs"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvAppName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/mobile_app_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSeConnecter" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/btnRechercher"
        app:layout_constraintStart_toEndOf="@+id/btnRechercher"
        app:layout_constraintTop_toTopOf="@+id/btnRechercher"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <Button
        android:id="@+id/btnRechercher"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="160dp"
        android:text="@string/rechercher"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName1" />

</androidx.constraintlayout.widget.ConstraintLayout>